--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">Onyiny-ang</h1>
-      <h2 class="project-tagline">&quot;Otu onye tuo izu, o gbue ochu&quot;</h2>
+      <h2 class="project-tagline">&quot;Brock Women in Computer Science&quot;</h2>
       <a href="https://github.com/brock-women/surgite-feminae.github.io" class="btn">View on GitHub</a>
       <a href="https://github.com/brock-women/surgite-feminae.github.io/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/github.com/brock-women/surgite-feminae.github.io/tarball/master" class="btn">Download .tar.gz</a>
