one final change for now

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <section class="main-content">
       <h3>
-<a id="#welcome-to-Brock-Women" class="anchor" href="#welcome-to-brock-women" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to Onyiny-ang's page</h3>
+<a id="#welcome-to-Brock-Women" class="anchor" href="#welcome-to-brock-women" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to Brock Women in Computer Science's page</h3>
 
 <p>We are still working on the content of our web page. . .stay tuned!</p>
 
